# bgdm-cpp

./: CMakeLists.txt  README.md
bgdm/: cutbox.hpp  default_geometry.hpp  default_geometry2double.h  jpeg2000.hpp  lru.hpp  png-test.cpp  png.hpp
cmake/: bgdm-cppConfig.cmake.in
tests/: test-cut_box_out_of_segment.cpp
